fix the fours small images alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -87,11 +87,97 @@ p, .info{
 /*Work Styling*/
 .container {
     display: flex;
-    justify-content: space-evenly;
-    width: 50%;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
     padding: 0 20px;
 }
 
+.card1 {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 25px;
+    background-image: url(../img/IMG_3751.JPG);
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    position: relative;
+    border: 3px solid var(--color1);
+}
+
+div .fourBoxes {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+
+.card2 {
+    width: 50%;
+    height: 150px;
+    background-image: url(../img/LEDwall.jpg);
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    position: relative;
+    border: 3px solid var(--color1);
+}
+
+.card3 {
+    background-image: url(../img/scientific-calculator.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 50%;
+    height: 150px;
+    overflow: hidden;
+    position: relative;
+    border: 3px solid var(--color1);
+}
+
+.card4 {
+    background-image: url(../img/puzzle.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 50%;
+    height: 150px;
+    overflow: hidden;
+    position: relative;
+    border: 3px solid var(--color1);
+}
+
+.card5 {
+    background-image: url(../img/rollbuddy.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 50%;
+    height: 150px;
+    overflow: hidden;
+    position: relative;
+    border: 3px solid var(--color1);
+}
+
+.card1 span,
+.card2 span,
+.card3 span,
+.card4 span,
+.card5 span {
+    background-color: var(--color1);
+    width: auto;
+    position: absolute;
+    bottom: 1em;
+    left: 0;
+    padding: 8px;
+    color: var(--color3);
+}
+/* div .fourBoxes img {
+    height: 150px;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    position: relative;
+} */
 /* .card1 img,
 .card2 img,
 .card3 img,
@@ -106,23 +192,23 @@ p, .info{
     width: 100%;
 } */
 
-.card1 {
+/* .card1 {
     height: 400px;
     margin: 0 30px 15px;
     background-size: cover;
     overflow: hidden;
     position: relative;
     border: 5px solid var(--color1);
-}
+} */
 
-.card1 span {
+/* .card1 span {
     width: auto;
     position: absolute;
     bottom: 10px;
     left: 0px;
     background-color: var(--color1);
     padding: 2px;
-}
+} */
 
 /* the 4 boxes are togeter */
 /* .smallCard {
@@ -132,7 +218,7 @@ p, .info{
     flex-wrap: wrap;
 } */
 
-.card2,
+/* .card2,
 .card3,
 .card4,
 .card5 {
@@ -142,13 +228,13 @@ p, .info{
     background-size: cover;
     overflow: hidden;
     border: 5px solid var(--color1);
-}
+} */
 
 /* .card2, .card4 {
     margin: 0 15px 15px 30px;
 } */
 
-.card2 span,
+/* .card2 span,
 .card3 span,
 .card4 span,
 .card5 span {
@@ -158,7 +244,7 @@ p, .info{
     left: 0px;
     background-color: var(--color1);
     padding: 2px;
-}
+} */
 
 .card1:hover, .card2:hover,
 .card3:hover, .card4:hover,
